# psram

./: .gitignore  BOARD_INIT_ANALYSIS_SUMMARY.md  BUILD.md  BUILD_RESULTS_SUMMARY.md  COMPREHENSIVE_REGISTER_ACCESS_VALIDATION_COMPLETE.md  ENHANCED_ANALYSIS_USAGE.md  ENHANCED_PERIPHERAL_ANALYSIS_REPORT.md  LICENSE  LLVM_ANALYSIS_PASS_TESTING_SUMMARY.md  MIMXRT700_COMPLETE_PERIPHERAL_ANALYSIS_FINAL_REPORT.md  MIMXRT700_Complete_Peripheral_Analysis_Report.md  MIMXRT700_LLVM_Analysis_Summary.md  PATCH_INSTRUCTIONS.md  PERIPHERAL_ANALYSIS_README.md  PERIPHERAL_ANALYSIS_SUMMARY.md  QUICK_LLVM_BUILD_GUIDE.md  README.md  README_CLANG_BUILD.md  REPRODUCE_ANALYSIS.sh  SETUP.md  TECHNICAL_IMPLEMENTATION_GUIDE.md  VALIDATION_FRAMEWORK_PLAN.md  VERIFICATION.md  VERIFICATION_RESPONSE.md  WORKFLOW_FIXES_SUMMARY.md  all_524_peripheral_accesses.json  all_accesses_readable.txt  analyze_all_drivers.sh  analyze_board_init.sh  analyze_chronological_peripheral_sequence.sh  analyze_clang_peripheral_accesses.sh  analyze_clang_with_llvm_pass.sh  board_init_clean_analysis.json  build.sh  build_clang.sh  build_clang_simple.sh  build_llvm_complete.sh  cleanup_repository.py  clock_config_chronological.json  compile_all_drivers_to_llvm.sh  (+38 more)
.augment/: Dockerfile  config.yaml  remote-agent.json
.augment/env/: setup.sh
.github/workflows/: ci.yml
chronological_reports/: COMPLETE_CHRONOLOGICAL_SEQUENCE.json  EXECUTION_SEQUENCE_SUMMARY.txt  board_chrono.json  clock_config_chrono.json  fsl_clock_chrono.json  fsl_dsp_chrono.json  fsl_ezhv_chrono.json  fsl_gdet_chrono.json  fsl_gpio_chrono.json  fsl_power_chrono.json  fsl_reset_chrono.json  fsl_sai_chrono.json
clang_ir_final/: fsl_xspi_enhanced_analysis.json
clang_ir_final/analysis_results/: fsl_clock_analysis.json  fsl_common_analysis.json  fsl_dsp_analysis.json  fsl_ezhv_analysis.json  fsl_gdet_analysis.json  fsl_gpio_analysis.json  fsl_power_analysis.json  fsl_sai_analysis.json
clang_ir_final/board_init_analysis/: board_analysis.json  clock_config_analysis.json
cmake/: CMakeLists_clang.txt  PeripheralAnalysis.cmake  clang_toolchain.cmake  config_clang.cmake  flags_clang.cmake
corrected_peripheral_analysis/: CORRECTED_COMPREHENSIVE_ENHANCED_CHRONOLOGICAL_ANALYSIS.json  address_mapping_analysis.json  corrected_base_addresses.json  peripheral_address_analysis.json
docs/: LLVM_BUILD_RESULTS.md  PERIPHERAL_ANALYSIS_PASS.md  README_CLANG_BUILD.md  REAL_DEBUG_CONSOLE_RESULTS.md  TROUBLESHOOTING.md
examples/: debug_console_usage.c
llvm_analysis_pass/: CMakeLists.txt
llvm_analysis_pass/include/: PeripheralAnalysisPass.h
llvm_analysis_pass/src/: PeripheralAnalysisPass.cpp  PeripheralAnalysisPass_REBUILT.cpp  PeripheralAnalysisPass_backup.cpp
llvm_analysis_pass/tests/: CMakeLists.txt  MULTI_MODULE_TEST_RESULTS.md  Makefile  clock_config_analysis.json  complete_analysis_without_fsl_clock.json  complete_multi_module_analysis.json  comprehensive_chronological_sequence_20250610_231837.json  comprehensive_chronological_sequence_20250610_232234.json  comprehensive_register_access_test.cpp  comprehensive_register_test  comprehensive_summary_20250610_231837.txt  comprehensive_summary_20250610_232234.txt  execution_order_analysis.json  fsl_clock_analysis.json  multi_module_test.json  pin_mux_analysis.json  run_tests.sh  single_module_test.json  test_function_coverage  test_function_coverage.cpp  test_function_separation_fix.py  test_peripheral_analysis.cpp  validate_all_register_accesses.py  validate_execution_order_against_c_code.py  validate_multi_module_execution_order.py
llvm_analysis_pass/tools/: peripheral-analyzer.cpp
mimxrt700evk_xspi_psram_polling_transfer_cm33_core0/: __repo__  app.h  pin_mux.h  xspi_psram_polling_transfer.c  xspi_psram_polling_transfer_cm33_core0_v3_15.xml
mimxrt700evk_xspi_psram_polling_transfer_cm33_core0/__repo__/: MIMXRT700-EVK_manifest_v3_15.xml  SW-Content-Register.txt
mimxrt700evk_xspi_psram_polling_transfer_cm33_core0/armgcc/: CMakeLists_clang.txt  CMakePresets.json  Makefile  build_debug.sh  build_flash_debug.sh  build_flash_release.sh  build_log.txt  build_release.sh  clang_toolchain.cmake  config_clang.cmake  flags_clang.cmake  mcux_include.json
mimxrt700evk_xspi_psram_polling_transfer_cm33_core0/iar/: xspi_psram_polling_transfer_cm33_core0.ewd
mimxrt700evk_xspi_psram_polling_transfer_cm33_core0/mdk/: xspi_psram_polling_transfer_cm33_core0.uvoptx  xspi_psram_polling_transfer_cm33_core0.uvprojx
peripheral_monitoring/: README.md
peripheral_monitoring/analysis/: analyze_register_access.py  board_init_coverage_analysis.py  capture_initialization_registers.py  detailed_register_failure_analysis.py  generate_complete_enhanced_analysis.py
peripheral_monitoring/documentation/: CLANG_GCC_COMPARISON_ANALYSIS.md  COMPREHENSIVE_BOARD_INIT_ANALYSIS.md  CORRECTED_REGISTER_ACCESS_ANALYSIS.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MIMXRT700_REGISTER_MONITOR_README.md  PERIPHERAL_MONITOR_TEST_SUMMARY.md
peripheral_monitoring/examples/: example_monitor_usage.py  monitor_config.json
peripheral_monitoring/results/: corrected_chronological_sequence.json  corrected_monitoring_results.json  corrected_sequence_summary.md  register_access_diagnostic_results.json  sequence_validation_report.json  validation_test_results.json
peripheral_monitoring/tools/: CORRECTED_comprehensive_chronological_sequence_20250610_230918.json  CORRECTED_comprehensive_chronological_sequence_20250610_231138.json  complete_workflow.py  (+51 more)
scripts/: setup_environment.sh  verify_build.sh
tests/: CMakeLists.txt  test_runner.c  unity_config.h
tests/mocks/: mock_fsl_debug_console.c  mock_fsl_debug_console.h  mock_fsl_xspi.c  mock_fsl_xspi.h
tests/unit/: test_main.c  test_xspi_psram_ops.c
validation_framework/: chronological_sequence_correction_report.json  comprehensive_test_results.json  comprehensive_test_suite.py  corrected_chronological_sequence_FIXED.json  enhanced_llvm_analyzer.py  enhanced_pylink_monitor.py  fix_chronological_sequence.py  register_definitions.json  run_validation_framework.py  source_code_validator.py
(+11687 files in other folders)
